adm-kub/kuber-homeworks/3.3/data/dep_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  labels:
    app: multitool
  namespace: app
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wbitt/network-multitool:alpine-extra
          ports:
          - name: backend
            containerPort: 80
