adm-kub/kuber-homeworks/3.3/data/dep_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
  labels:
    app: multitool
  namespace: app
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: wbitt/network-multitool:alpine-extra
          ports:
          - name: frontend          
            containerPort: 80
