adm-kub/kuber-homeworks/3.3/data/svc_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app
spec:
  selector:
    app: backend
  ports:
  - name: multitool-backend
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
