adm-kub/kuber-homeworks/3.3/data/svc_cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
spec:
  selector:
    app: cache
  ports:
  - name: multitool-cache
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
