adm-kub/kuber-homeworks/3.3/data/svc_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
spec:
  selector:
    app: frontend
  ports:
  - name: multitool-frontend
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
